# seeed_eink_board

./: .gitignore  CLAUDE.md  README.md  device_config.example.json  image_server.py  pyproject.toml
firmware/: README.md  platformio.ini
firmware/src/: config.h.example  config_manager.cpp  config_manager.h  config_server.cpp  config_server.h  display.cpp  display.h  main.cpp
